src/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    font-family: sans-serif;
    --board-border: 1px solid black;
    --cell-border: var(--board-border);
    --cell-bg-color: beige;
    --cell-bg-color-occupied: rgb(94, 87, 87);
    --cell-bg-color-occupied-attacked: red;
    --cell-bg-color-non-occupied-attacked: cyan;
    --cell-bg-color-hover: rgb(206, 206, 181);
    --cell-bg-color-active: rgb(191, 191, 154);
    --ship-cell-bg-color-hover: rgb(112, 166, 210);
    --ship-cell-bg-color-selected: rgb(207, 225, 239);
    --ship-cell-bg-color-placed: var(--cell-bg-color-occupied);
    --formation-board-cell-bg-color-hovered: rgb(172, 169, 169);
    --formation-board-cell-bg-color-hovered-na: rgb(211, 107, 107);
}

body {
    background-color: rgb(66, 72, 78);
}

.cell {
    background-color: var(--cell-bg-color);
    border: var(--cell-border);
}

.boards {
    padding-top: 1em;
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-items: center;
    gap: 1em;
}

main {
    padding: 1.5em;
}

.score {
    font-weight: 600;
    font-size: 1.2rem;
    justify-self: center;
}

.score.player1 {
    color: rgb(156, 233, 156);
}
.score.player2 {
    color: rgb(223, 119, 119);
}

.board {
    display: grid;
    width: 350px;
    grid-template-columns: repeat(10, 1fr);
    height: auto;
    border: var(--board-border);
    aspect-ratio: 1;
    cursor: default;
}

.board.player1 .cell.occupied {
    background-color: var(--cell-bg-color-occupied);
}

div.board .cell.attacked {
    background-color: var(--cell-bg-color-non-occupied-attacked);
}

div.board .cell.attacked.occupied {
    background-color: var(--cell-bg-color-occupied-attacked);
}

div.board.player1 {
    cursor: not-allowed;
}

.board.player2 .cell:hover {
    background-color: var(--cell-bg-color-hover);
}
.board.player2 .cell:active {
    background-color: var(--cell-bg-color-active);
}

dialog::backdrop {
    background-color: rgb(0 0 0 / 50%);
}

dialog.game-over.win {
    background-color: rgb(158, 230, 173);
}
dialog.game-over.loss {
    background-color: rgb(243, 172, 172);
}

dialog.game-over {
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: auto;
    padding: 1em;
    border-radius: 4px;
}

dialog.game-over div {
    display: flex;
    flex-direction: column;
    gap: 1.5em;
}

dialog.game-over div h3 {
    font-size: 1.75rem;
    font-weight: 500;
    font-family: sans-serif;
    padding: 0px 16px;
}

button.play-again {
    font-family: sans-serif;
    align-self: center;
    padding: 4px 12px;
    appearance: none;
    background-color: transparent;
    border: 1.5px solid black;
    border-radius: 4px;
    font-size: 1rem;
    cursor: pointer;
}
button.play-again:hover {
    background-color: rgba(0, 0, 0, 0.1);
}
button.play-again:active {
    background-color: rgba(0, 0, 0, 0.15);
}
button.play-again:focus {
    outline: none;
}

div.formation-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    justify-content: center;
    justify-items: center;
    gap: 3em;
}

ul.tips {
    display: grid;
    text-align: start;
    justify-items: start;
    margin-top: 3em;
    justify-self: end;
    margin-bottom: 3em;
}

.tip {
    color: white;
    font-weight: 600;
    line-height: 1.3;
    margin-bottom: 1.3em;
    max-width: 35ch;
}

div.ships {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 1em;
    justify-self: start;
    align-content: center;
}

div.ships.horizontal {
    align-content: center;
    grid-template-columns: 1fr;
    gap: 1.5em;
}

div.ships.horizontal .ship {
    display: flex;
    align-items: center;
}

div.ships.horizontal .ship {
    justify-self: start;
}

div.ships.horizontal .ship-cell {
    display: flex;
    align-items: start;
    border-bottom: solid black 2px;
    border-right: none;
}
div.ships.horizontal .ship-cell:last-child {
    border-right: solid black 2px;
}

div.ship {
    align-self: start;
}

div.ship-cell {
    background-color: steelblue;
    padding: 16px;
    border: 2px solid black;
    border-bottom: none;
}

.ships:not(:has(.ship.selected)) div.ship:not(.placed):hover .ship-cell {
    background-color: var(--ship-cell-bg-color-hover);
}

div.ship.selected .ship-cell {
    background-color: var(--ship-cell-bg-color-selected);
}

div.ship.placed .ship-cell {
    background-color: var(--cell-bg-color-occupied);
}

div.ship-cell:last-child {
    border-bottom: 2px solid black;
}

div.formation-container .cell.hover {
    background-color: var(--formation-board-cell-bg-color-hovered);
}

div.formation-container .cell.hover.na {
    background-color: var(--formation-board-cell-bg-color-hovered-na);
}

div.formation-container .board .cell.occupied {
    background-color: var(--cell-bg-color-occupied);
}

main {
    text-align: center;
}

button.confirm {
    margin-top: 1em;
    padding: 6px 12px;
    appearance: none;
    border: 2px solid black;
    font-size: 1rem;
    border-radius: 4px;
    opacity: 0.5;
    cursor: not-allowed;
}

button.confirm.enabled {
    opacity: 1;
    cursor: pointer;
}

button.confirm.enabled:hover {
    background-color: rgb(219, 219, 219);
}
button.confirm.enabled:active {
    background-color: rgb(206, 206, 206);
}

button.x-axis,
button.y-axis,
button.human,
button.ai {
    appearance: none;
    border-radius: 4px;
    padding: 4px 8px;
    /* margin-bottom: 12px; */
    cursor: pointer;
    border: 2px solid black;
}

button.x-axis,
button.human {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

button.y-axis,
button.ai {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    border-left: none;
}

button.x-axis.selected,
button.y-axis.selected,
button.human.selected,
button.ai.selected {
    background-color: rgb(154, 203, 243);
}

button.x-axis:not(.selected):hover,
button.y-axis:not(.selected):hover,
button.human:not(.selected):hover,
button.ai:not(.selected):hover {
    background-color: rgb(204, 210, 217);
}

button.x-axis:not(.selected):active,
button.y-axis:not(.selected):active,
button.human:not(.selected):active,
button.ai:not(.selected):active {
    background-color: rgb(185, 199, 211);
}

form.player-info {
    display: grid;
    gap: 1.75em;
    border: 2px solid white;
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
    padding: 1em 1.5em;
    background-color: slategray;
    border-radius: 6px;
}

form h3 {
    color: white;
}

form button.confirm-form {
    padding: 6px 8px;
    appearance: none;
    cursor: pointer;
    font-size: 1rem;
    width: 200px;
    justify-self: center;
    border: 2px solid transparent;
    border-radius: 4px;
}

form button.confirm-form:hover {
    background-color: rgb(217, 217, 217);
}
form button.confirm-form:active {
    background-color: rgb(197, 196, 196);
}

form input {
    padding: 6px 8px;
    font-size: 1rem;
    appearance: none;
    width: 200px;
    justify-self: center;
    border: 2px solid transparent;
    border-radius: 4px;
    outline: 1.5px solid rgb(93, 87, 87);
}

form input:focus {
    outline: 2px solid black;
}

